2010-09-08  maximilian attems <max@stro.at>

	* Debug compile fix.

2010-09-08  Jilles Tjoelker <jilles@stack.nl>

	* Fix varinit ordering that broke fc.

2010-07-06  Gerrit Pape <pape@smarden.org>

	* Check exit for eval NSUBSHELL.

2010-07-06  Herbert Xu <herbert@gondor.apana.org.au>

	* Fix loss of variables when hash collides.
	* Removed dead code for eval NPIPE.

2010-06-28  Gerrit Pape <pape@smarden.org>

	* Don't clear eflag in evalbackcmd.

2010-05-29  Herbert Xu <herbert@gondor.apana.org.au>

	* Continue after EINTR in read(1) with no pending signals.

2010-05-27  Jilles Tjoelker <jilles@stack.nl>

	* Force fork if any trap is set, not just on EXIT.
	* Fix corruption of redirections with byte 0x81.

2010-05-27  Herbert Xu <herbert@gondor.apana.org.au>

	* Fix poplocalvar on abnormal exit from function.
	* Do not poplocalvars prematurely on regular utilities.
	* Move null redirect checks into caller.
	* Fix popredir on abnormal exit from built-in.
	* Fix wait regression where it does not wait for all jobs.

2010-05-26  Herbert Xu <herbert@gondor.apana.org.au>

	* Replace cmdenviron with localvars.

2010-05-25  Herbert Xu <herbert@gondor.apana.org.au>

	* Fix poplocalvar leak.
	* Move unsetvar functionality into setvareq.

2010-05-24  Herbert Xu <herbert@gondor.apana.org.au>

	* Add localvars nesting, local now fails outside functions.

2010-05-03  Gerrit Pape <pape@smarden.org>

	* Fix command -- crash.

2010-04-15  H. Peter Anvin <hpa@zytor.com>

	* Fix for job control off warning.

2010-04-02  Herbert Xu <herbert@gondor.apana.org.au>

	* Use faccessat if available.

2010-04-02  Herbert Xu <herbert@gondor.apana.org.au>

	* Make trap signal name/number errors non-fatal.
	* Release 0.5.6.

2010-04-02  maximilian attems <max@stro.at>

	* Use TMPDIR in mkbuiltins.

2010-03-10  Jilles Tjoelker <jilles@stack.nl>

	* Fix logical or result value.

2010-03-09  Herbert Xu <herbert@gondor.apana.org.au>

	* Fix binary operator parsing.
